--- a/popup.html
+++ b/popup.html
@@ -27,6 +27,7 @@
   </head>
   <body>
     <div id="results"></div>
+    <div id="jsonld" style="white-space: pre-wrap"></div>
     <script src="popup.js"></script>
   </body>
 </html>
