--- a/popup.html
+++ b/popup.html
@@ -6,6 +6,8 @@
       body {
         font-family: Arial, sans-serif;
         margin: 15px;
+        width: 400px; /* 원하는 너비로 설정 */
+        height: 800px; /* 원하는 높이로 설정 */
       }
       h3 {
         margin-top: 15px;
@@ -26,6 +28,7 @@
     </style>
   </head>
   <body>
+    <button id="refreshPage">Refresh</button>
     <div id="results"></div>
     <div id="jsonld" style="white-space: pre-wrap"></div>
     <script src="popup.js"></script>
